--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									Hello! My name is Dhinesh Pandi.I'm an Intern in IN-D as a Software Engineer Trainee
+									Hello! My name is Dhinesh Pandi.I'm an Software Engineer at IN-D
 								</h3>
 								<p>
-									I am a student and currently pursing B.Tech (IT) in Sri Krishna College of Engineering and Technology, Coimbatore, TamilNadu, India.I completed my Diploma in PSG Polytechnic College in Coimbatore.
+									I Completed my B.Tech (IT) in Sri Krishna College of Engineering and Technology, Coimbatore, TamilNadu, India.I completed my Diploma in PSG Polytechnic College in Coimbatore.
 								</p>
 								<div class="row">
 									<div class="col-sm-4">
